# PDF-Merger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_pdf_merger.bat  run_pdf_merger.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
docs/: GITHUB_SETUP.md  QUICK_START.md  README.md
examples/: demo_multiple_pdfs.py
scripts/: run_pdf_merger.bat
src/pdf_merger/: __init__.py  __main__.py  pdf_merger.py
tests/: test_pdf_merger.py
